Show tab highlighter on all theme for collapsed tree with partially/fully highlighted

--- a/webextensions/sidebar/sidebar.css
+++ b/webextensions/sidebar/sidebar.css
@@ -11,4 +11,5 @@
 @import url("styles/throbber.css");
 @import url("styles/sound-button.css");
 @import url("styles/drag-and-drop.css");
+@import url("styles/active-tab-marker.css");
 
