--- a/webextensions/sidebar/styles/square/vertigo.css
+++ b/webextensions/sidebar/styles/square/vertigo.css
@@ -14,3 +14,9 @@
 .mutiple-highlighted .tab:not(.highlighted) {
   opacity: 0.5;
 }
+
+
+/* hide regular active tab marker */
+.active-marker::before {
+  display: none !important;
+}
