Give more highlighted appearance for multiselected tabs.
This change respects https://bugzilla.mozilla.org/show_bug.cgi?id=1515686

--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -254,3 +254,27 @@
 .highlighter::before {
   display: none !important;
 }
+
+
+/* multiselection of tabs */
+
+.mutiple-highlighted > .tab.highlighted::after {
+  background: var(--tab-surface-active-gradient);
+  bottom: 0;
+  content: " ";
+  display: block;
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 10;
+}
+
+.mutiple-highlighted > .tab.highlighted::after {
+  opacity: 0.35;
+}
+
+.mutiple-highlighted > .tab.highlighted.${Constants.kSELECTED}::after {
+  opacity: 0.45;
+}
