--- a/webextensions/sidebar/styles/square/base.css
+++ b/webextensions/sidebar/styles/square/base.css
@@ -81,23 +81,20 @@
 
 /* multiselection of tabs */
 
+:root {
+  --multiselected-color: Highlight;
+}
+
 .mutiple-highlighted > .tab.highlighted::after {
-  background: Highlight;
+  background: var(--multiselected-color);
   bottom: 0;
   content: " ";
   display: block;
   left: 0;
+  opacity: var(--multiselected-color-opacity);
   pointer-events: none;
   position: absolute;
   right: 0;
   top: 0;
   z-index: 10;
-}
-
-.mutiple-highlighted > .tab.highlighted::after {
-  opacity: 0.25;
-}
-
-.mutiple-highlighted > .tab.highlighted.${Constants.kSELECTED}::after {
-  opacity: 0.35;
 }
