--- a/webextensions/sidebar/styles/square/mixed.css
+++ b/webextensions/sidebar/styles/square/mixed.css
@@ -18,6 +18,8 @@
 :root {
   --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.4);
   --tab-surface-active-gradient-end:   rgba(249, 249, 250, 0);
+
+  --multiselected-color-opacity: 0.15;
 }
 :root .tab:not(.active):hover {
   --tab-surface-active-gradient-start: rgba(249, 249, 250, 0.25);
