Apply more natural bg color to the tab drag handle

--- a/webextensions/sidebar/styles/drag-and-drop.css
+++ b/webextensions/sidebar/styles/drag-and-drop.css
@@ -131,7 +131,7 @@
 }
 
 #tab-drag-handle > span {
-  background: var(--tab-surface-active, var(--bg-color));
+  background: var(--tab-like-surface, var(--bg-color));
   border-left: 1px solid var(--tab-border);
   display: table-cell;
   height: var(--handle-size);
