--- a/webextensions/sidebar/styles/sidebar/sidebar.css
+++ b/webextensions/sidebar/styles/sidebar/sidebar.css
@@ -39,6 +39,8 @@
   --bg-color-inactive: #e8e8e8;
   --shadow-color: #404040;
   --shadow-color-inactive: #868686;
+  --tab-like-surface: #d4dde5;
+  --tab-surface: transparent;
   --tab-surface-active-color: #94A1C0;
   --tab-surface-active-gradient: linear-gradient(to bottom, #A0B0CF, #7386AB) repeat-x;
   --tab-surface-active-gradient-inactive: linear-gradient(to bottom, #B4B4B4, #8A8A8A) repeat-x;
