Apply tab surface color on the "High Contrast" skin #2210

--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -9,7 +9,7 @@
 
 :root {
   --tab-like-surface: Background;
-  --tab-surface: var(Background);
+  --tab-surface: var(--tab-like-surface);
   --tab-text: CaptionText;
   --tab-text-inverted: Caption;
   --tab-border: ThreeDHighlight;
