Add ability to open options page in tabs

--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -4,6 +4,19 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */
 
+body.independent {
+  background: -moz-dialog;
+  box-sizing: border-box;
+  color: #222426;
+  cursor: default;
+  display: flex;
+  flex-direction: column;
+  font: caption;
+  margin: 0;
+  padding: 1em;
+  -moz-user-select: none;
+}
+
 p, ul {
   margin: 0 0 0.5em 0;
   padding: 0;
@@ -165,4 +178,10 @@ body > section.collapsed > h1:first-child ~ * {
 
 #defaultBookmarkParentChooser {
   max-width: 100%;
+}
+
+:target {
+  box-shadow: 0 0 0.5em highlight;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
