--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -67,7 +67,8 @@ label[disabled="true"] button {
   width: calc(1em + 100px + 8em); /* radio + image + label */
 }
 
-#style-radiogroup li img {
+#style-radiogroup li img,
+#applyBrowserTheme ~ img {
   max-width: 100px;
 }
 
