Allow to put all extra context menu items at the top level of emulated tab context menu #2240

--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -126,6 +126,21 @@ label input[type="checkbox"] ~ img {
 }
 
 
+#contextConfigs th {
+  font-weight: normal;
+  text-align: left;
+}
+
+#contextConfigs td {
+  text-align: center;
+}
+
+#contextConfigs table input[type="checkbox"] {
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+}
+
+
 fieldset.collapsible.collapsed > *:not(legend) {
   display: none;
 }
