--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -64,7 +64,7 @@
   --throbber-color: HighlightText;
   --tab-border: Highlight;
   --tab-text: HighlightText;
-  --tab-text-inverted: Highligh;
+  --tab-text-inverted: Highlight;
 }
 
 .tab:not(.active) {
