Add UI to on/off permisssions #2282

--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -13,7 +13,7 @@ body.independent {
   flex-direction: column;
   font: caption;
   margin: 0;
-  padding: 1em;
+  padding: 1em 1em 100%;
   -moz-user-select: none;
 }
 
