--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -17,6 +17,11 @@ body.independent {
   -moz-user-select: none;
 }
 
+em {
+  font-style: normal;
+  font-weight: bold;
+}
+
 p, ul {
   margin: 0 0 0.5em 0;
   padding: 0;
