--- a/webextensions/options/options.css
+++ b/webextensions/options/options.css
@@ -155,6 +155,10 @@ label input[type="checkbox"] ~ img {
   margin-left: 3em;
   margin-right: 3em;
 }
+#externalAddonPermissionsGroup th + th,
+#externalAddonPermissionsGroup td + td {
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+}
 #externalAddonPermissionsGroup tbody tr {
   border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
