--- a/webextensions/sidebar/styles/metal/metal.css
+++ b/webextensions/sidebar/styles/metal/metal.css
@@ -50,6 +50,7 @@
   border-image: url("tab-active-r.png") 10 10 10 5 fill / 10px 10px 10px 5px;
 }
 
+/* macOS workaround */
 :root.left-scrollbar.overlay-scrollbar #tabbar.overflow .tab:not(.pinned) {
   padding-left: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
