--- a/webextensions/sidebar/styles/square/highcontrast.css
+++ b/webextensions/sidebar/styles/square/highcontrast.css
@@ -103,10 +103,10 @@
 }
 
 /* macOS workaround */
-:root.platform-mac.left-scrollbar #tabbar.overflow .tab:not(.pinned) {
+:root.platform-mac #tabbar:dir(rtl).overflow .tab:not(.pinned) {
   padding-left: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
-:root.platform-mac.right-scrollbar #tabbar.overflow .tab:not(.pinned) {
+:root.platform-mac #tabbar:dir(ltr).overflow .tab:not(.pinned) {
   padding-right: var(--scrollbar-placeholder-size); /* it will be enough larger than the default padding */
 }
 
